# epwing-wikipedia-ja

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.md  CODEX_PROMPT.md  COMPATIBILITY.md  CONFIG_REFERENCE.md  CURRENT_TASK.md  DATA_CONTRACTS.md  DECISIONS.md  DIFF.md  DOCS_MANIFEST.json  EDIT.md  GAIJI.md  LICENSING.md  LOG.md  MEMORY.md  Makefile  PLAN.md  README.md  RELEASE_CHECKLIST.md  SOURCES.md  TASKS.md  TESTING.md  TROUBLESHOOTING.md  VIEWER_VERIFICATION.md  compose.reference.yaml  compose.yaml  preview_articles.html  pyproject.toml
config/: default.toml  japan-query-set.toml  local-paths.toml  query-set.toml
docker/: app.Dockerfile  compose-smoke.sh  toolchain.Dockerfile
elisp/: lookup-image-url.el
ref/: DIFF.md
schemas/: doctor-report.schema.json  source-lock.schema.json
scripts/: preview_articles.py
tests/: test_acquire.py  test_archive.py  test_auth.py  test_build_info.py  test_build_logical_hash.py  test_checksums.py  test_clean.py  (+149 more)
v1/: AGENTS.md  Makefile  PLAN.md  README.md  compose.yaml  pyproject.toml
v1/config/: default.toml
v1/docker/: toolchain.Dockerfile
v1/docker/scripts/: build-handcrafted.sh  verify-handcrafted.sh
v1/patches/: eb-4.4.3-aarch64-config.patch
v1/src/wikiepwing/: __init__.py  config.py  doctor.py  logging.py
v1/src/wikiepwing/dump/: __init__.py  xml_reader.py
v1/src/wikiepwing/epwing/: __init__.py  gaiji.py  source.py
v1/src/wikiepwing/mediawiki/: __init__.py  media.py  parser.py  tables.py  templates.py
v1/src/wikiepwing/model/: __init__.py  article.py
v1/src/wikiepwing/pipeline/: export.py  ingest.py
v1/src/wikiepwing/render/: text.py
v1/src/wikiepwing/search/: headwords.py
v1/src/wikiepwing/storage/: database.py
v1/tests/: __init__.py  test_cli.py  test_epwing_source.py  test_epwing_verify.py  test_headwords.py  test_parser.py  test_redirects.py  test_tables.py  test_wikitext_readability.py  test_xml_reader.py
v1/tests/fixtures/: gaiji-records.tsv  image-records.tsv
v1/toolchain/handcrafted/: Makefile
v1/toolchain/records/: Makefile
(+254 files in other folders)
